# StraylightStudio

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
agents/Starrunner.Agent/: FrameMetadata.cs  Program.cs  Starrunner.Agent.csproj  appsettings.json
agents/Starrunner.Agent.MetadataTests/: Program.cs  Starrunner.Agent.MetadataTests.csproj
docs/astro-imaging/: README.md  acquisition-ui-redesign.md  api-concepts.md  architecture.md  client-app.md  current-integration-state.md  desktop-packaging.md  desktop-runtime.md  frame-transfer-protocol.md  minipc-windows-setup.md  networking.md  power-planning.md  roadmap.md  stellarium-integration.md  storage-and-processing.md  ui-principles.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/clients/: frameTransferClient.ts  ninaClient.ts  phd2Client.ts  settingsClient.ts  storageClient.ts  tauriClient.ts
tools/: drop-fake-fits.ps1  install-starrunner-agent-startup.ps1  probe-nina-api.mjs  publish-starrunner-agent.ps1
